--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
     "start": "sirv public --host 0.0.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.0",
+    "@babel/node": "^7.8.0",
+    "@cypress/webpack-preprocessor": "^4.1.1",
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^7.0.0",
+    "cypress": "^3.8.2",
+    "cypress-svelte-unit-test": "^1.5.0",
+    "jasmine": "^3.5.0",
+    "npm-run-all": "^4.1.5",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0",
-    "@babel/core": "^7.8.0",
-    "@babel/node": "^7.8.0",
-    "@cypress/webpack-preprocessor": "^4.1.1",
-    "cypress": "^3.8.2",
-    "cypress-svelte-unit-test": "^1.5.0",
-    "jasmine": "^3.5.0",
-    "npm-run-all": "^4.1.5"
+    "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "node-sass": "^4.14.1",
+    "sirv-cli": "^0.4.4",
+    "svelte-preprocess": "^3.7.4"
   }
 }
