--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@cypress/webpack-preprocessor": "^4.1.1",
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-replace": "^2.3.2",
     "cypress": "^3.8.2",
     "cypress-svelte-unit-test": "^1.5.0",
     "jasmine": "^3.5.0",
